# argos-experiments

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO  compile_flags.txt  foraging.txt  launcher.py  main.py  meson.build  pitone.py
conf/: foraging.argos  meson.argos
doc/: Doxifile.in  index.md
include/controllers/: controller.hh  eyebot_controller.hh  footbot_controller.hh  spiri_controller.hh
include/loop_functions/: loop_function.hh
include/support/: coordination.hh  logging.hh  rab.hh  setup.hh  squadrons.hh  target.hh  targets.hh  task.hh  task_allocator.hh  task_executor.hh  vectors.hh
include/support/task_allocators/: NN.hh  RandomChoice.hh  default.hh  nn.hh  nn2.hh
include/support/task_executors/: default.hh
include/user_functions/: user_function.hh  user_function2.hh
plot/: Untitled.ipynb  __main__.py
plot/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/controllers/: controller.cc  eyebot_controller.cc  footbot_controller.cc  footbot_foraging.cc  spiri_controller.cc
src/loop_functions/: foraging_loop_functions.cc  foraging_qt_user_functions.cc  loop_function.cc
src/loop_functions/id_loop_functions/: id_qtuser_functions.cc
src/support/: coordination.cc  squadrons.cc  target.cc  targets.cc
src/user_functions/: user_function.cc  user_function2.cc
